backend/out5.txt
node : C:\Users\Prash\l
inksync-ai\backend\list
_models.js:12
At line:1 char:1
+ node list_models.js 
2>&1 | Out-File 
-Encoding utf8 out5.txt
+ ~~~~~~~~~~~~~~~~~~~~~
~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (C:\Users\Pras   
 h\...st_models.js:    
12:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
const url = \`https://g
enerativelanguage.googl
eapis.com/v1beta/models
?key=\${apiKey}\`;
            ^

SyntaxError: Invalid 
or unexpected token
    at wrapSafe (node:i
nternal/modules/cjs/loa
der:1638:18)
    at Module._compile 
(node:internal/modules/
cjs/loader:1680:20)
    at Object..js (node
:internal/modules/cjs/l
oader:1839:10)
    at Module.load (nod
e:internal/modules/cjs/
loader:1441:32)
    at Function._load (
node:internal/modules/c
js/loader:1263:12)
    at TracingChannel.t
raceSync (node:diagnost
ics_channel:328:14)
    at wrapModuleLoad (
node:internal/modules/c
js/loader:237:24)
    at Function.execute
UserEntryPoint [as 
runMain] (node:internal
/modules/run_main:171:5
)
    at node:internal/ma
in/run_main_module:36:4
9

Node.js v22.22.0
